--- a/webProject/package.json
+++ b/webProject/package.json
@@ -18,6 +18,7 @@
     "@types/react": "^17.0.39",
     "@types/react-dom": "^17.0.11",
     "@types/react-router-dom": "^5.3.3",
+    "axios": "^0.26.1",
     "babel-eslint": "^10.1.0",
     "babel-jest": "^27.4.2",
     "babel-loader": "^8.2.3",
