--- a/management-platform/package.json
+++ b/management-platform/package.json
@@ -3,7 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "vite:dev": "vite --mode vitedev",
+    "vite:dev": "vite",
+    "buildvite": "vite build",
     "start": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint"
